# Ruby_milestone2

./: NOTICE  README.md  tutorial.md
ruby-api/: Cargo.toml
ruby-api/benchmark/: benchmark.md  ruby ip.postman_collection.json  ruby ip.postman_test_run.json  ruby qua.postman_collection.json  ruby qua.postman_test_run.json
ruby-api/src/: define.rs  dmcfe_ip.rs  lib.rs  quadratic_sgp.rs  simple_ip.rs
ruby-api/src/math/: matrix.rs
ruby-api/src/ml/: disease_prediction.rs  neural_network.rs
ruby-api/src/utils/: mod.rs  rand_utils.rs
ruby-api/src/zk/: dlog.rs  mod.rs  qp.rs  sip.rs  types.rs
ruby-api/tests/: test_dmcfe_ip.rs  test_nn.rs  test_quadratic_sgp.rs  test_simple_ip.rs  test_utils.rs  test_zk.rs
ruby-ui/: .env  .gitignore  README.md  package.json
ruby-ui/public/: index.html
ruby-ui/src/: AccountSelector.js  App.js  NodeInfo.js  setupProxy.js
ruby-ui/src/components/: AccountSelector.js  RadioCard.js  Request.js
ruby-ui/src/config/: common.json
ruby-ui/src/hooks/: index.js
ruby-ui/src/pages/: KeyAuthority.js  Owner.js  Purchaser.js
ruby-ui/src/substrate-lib/components/: TxButton.js
